Change FontCacheWin::PreCacheFont() to be synchronous.

It was incorrectly changed to be asynchronous in r519471. This causes
the font pre-cache mechanism to become unreliable, as there is no longer
a guarantee that the pre-caching will occur before the font is used.

BUG=809888

Change-Id: I15d14200c241089ae7d365a6ed0a61b119214e43
Reviewed-on: https://chromium-review.googlesource.com/914511
Reviewed-by: Ken Rockot <rockot@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536457}
Former-commit-id: c80f34c6c7a65103533f4d402917d27d8abba368